configs/observability/virtual-service-gateway.yaml
# Virtual service for gateway routing
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  hosts:
  - bookinfo.local
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - route:
    - destination:
        host: productpage
        subset: v1
      weight: 100
